	    - Fixed issue for php 7.2 when using billable items.
	    - Added function to use the native TAX field implemented in WHMCS 7.7.
2.8 	2019 Jul 17
            - Fixed EU Country list.
            - Fixed where php 7.2 removed the vatrate if it was 0, causing Acumulus to use the standard 21% vat rate.
2.9 	2020 Sep 12
	    - Fixed No invoice sent to Acumulus when customer placed an order with bank transfer.
	    - Fixed sync issue with WHMCS version 8.0.0.
3.0     2020 Nov 14
        - Fixed Empty invoices when not using tax in whmcs.
        - Fixed Double customer names in acumulus after import.
        - Fixed Error when selecting different payment type or date when no invoice has been sent.
3.1     2020 Dec 28
        - Added function to remove UK/GB from the EU per 1-1-2021
3.2     2021 Apr 25
        - Fixed a Vat rate warning when an invoice was sent to a person in a non EU country.
        - Fixed: Company name was filled with person name if the customer was not a company.
3.3     2022 Jan ??
        - Addon is now maintained by Buro RaDer.
        - Refactored:
          - Code style and formatting (PSR-2).
          - Readme, Licences, links to online GPLv3 license.
          - Changed Acumulus Connect to just Acumulus in UI texts and comments.
          - Removed all &reg; (®) signs.
          - Changed texts and links to author and support.
          - Typos, CRLF -> LF, new array style ([]).
          - Added PHPDoc blocks and type-info to parameters and function returns.
          - Removed warnings and errors found by PhpStorm inspections.
          - Removed use of functions from the mysql extension (already removed in PHP 7.0!)
          - Changed contents of the <connector> tag in XML messages to the Acumulus API.
          - Added a file with stubs of functions and classes used from WHMCS that
            aids - at development time - with autocompletion, static (type)
            checking, etc. This file is never loaded at runtime.