@@ -5,8 +5,8 @@
  * This file will be detected and loaded by WHMCS on every page load,
  * {@see https://developers.whmcs.com/hooks/module-hooks/}
  *
- * @noinspection PhpUnused  Hooks are called from the WHMCS system by
- *    constructing their name.
+ * @noinspection PhpUnused  Hooks are called from the WHMCS system based on
+ *    naming patterns.
  */
 if (!defined("WHMCS")) {
     die("This file cannot be accessed directly");
@@ -25,23 +25,25 @@ include_once('acumulus_connect_functions.php');
  * - A new invoice has been generated by the cron, order process, API, when
  *   converting a quote to an invoice, or when published a draft invoice with
  *   email. This is run before the invoice is sent to the client (hook
- *   'InvoiceCreationPreEmail'.
+ *   'InvoiceCreationPreEmail').
  *
  * @param array $vars
  */
 function acumulus_connect_triggerInvoiceCreationPreEmailHook(array $vars): void
 {
+    $invoiceid = $vars['invoiceid'];
     $config = acumulus_connect_getConfig();
-    if ($config['acumulus_hook_invoice_create_enabled'] == 'on') {
-        $invoiceid = $vars['invoiceid'];
+    if ($config['acumulus_hook_invoice_create_enabled'] === 'on') {
         // Check if invoice id and invoice token are already stored and, if so,
         // skip sending the invoice.
         if (!Capsule::table('mod_acumulus_connect')->where('id', $invoiceid)->exists()) {
             // No token exists, so let's send the invoice;
             acumulus_connect_sendInvoice($config, $invoiceid);
         } else {
-            logActivity("acumulus_connect - Skipped sending Invoice ID: " . $invoiceid . " by hook 'triggerInvoiceCreationPreEmailHook' because it already was sent.");
+            logActivity("acumulus - Skipped sending Invoice ID: $invoiceid by hook 'triggerInvoiceCreationPreEmailHook' because it already was sent.");
         }
+    } else {
+        logActivity("acumulus - Skipped sending Invoice ID: $invoiceid by hook 'triggerInvoiceCreationPreEmailHook' because it is disabled.");
     }
 }
 
@@ -54,10 +56,12 @@ function acumulus_connect_triggerInvoiceCreationPreEmailHook(array $vars): void
  */
 function acumulus_connect_triggerInvoicePaidHook(array $vars): void
 {
+    $invoiceid = $vars['invoiceid'];
     $config = acumulus_connect_getConfig();
-    if ($config['acumulus_hook_invoice_paid_enabled'] == 'on') {
-        $invoiceid = $vars['invoiceid'];
+    if ($config['acumulus_hook_invoice_paid_enabled'] === 'on') {
         acumulus_connect_updateInvoice($config, $invoiceid);
+    } else {
+        logActivity("acumulus - Skipped updating invoice ID: $invoiceid by hook 'acumulus_connect_triggerInvoicePaidHook' because it is disabled.");
     }
 }
 
@@ -83,10 +87,12 @@ function acumulus_connect_triggerInvoiceChangeGatewayHook(array $vars): void
  */
 function acumulus_connect_triggerInvoiceCanceledHook(array $vars): void
 {
+    $invoiceid = $vars['invoiceid'];
     $config = acumulus_connect_getConfig();
-    if ($config['acumulus_hook_invoice_canceled_enabled'] == 'on') {
-        $invoiceid = $vars['invoiceid'];
+    if ($config['acumulus_hook_invoice_canceled_enabled'] === 'on') {
         acumulus_connect_InvoiceCanceled($config, $invoiceid);
+    } else {
+        logActivity("acumulus_connect - Skipped creating credit invoice for ID: $invoiceid by hook 'acumulus_connect_triggerInvoiceCanceledHook' because it is disabled.");
     }
 }
 
